Remove warning message.
Use clazz.getConstructor().newInstance() instead of clazz.getInstance().